crates/pamoja-ffi/include/pamoja.h


typedef enum {
  PamojaStatus_Ok = 0,
  PamojaStatus_Transport = 1,
  PamojaStatus_Io = 2,
  PamojaStatus_Codec = 3,
  PamojaStatus_Closed = 4,
  PamojaStatus_Unsupported = 5,
  PamojaStatus_InvalidArgument = 6,
  PamojaStatus_Other = 7,
  PamojaStatus_Panic = 8,
  PamojaStatus_Auth = 9,
} PamojaStatus;
typedef struct PamojaMavlinkCommand PamojaMavlinkCommand;
typedef struct PamojaMavlinkFrame PamojaMavlinkFrame;
typedef struct PamojaMavlinkMessage PamojaMavlinkMessage;
typedef struct PamojaMavlinkMissionReceiver PamojaMavlinkMissionReceiver;
typedef struct PamojaMavlinkMissionSender PamojaMavlinkMissionSender;
typedef struct {
  uint8_t system_id;
  uint8_t component_id;
  uint8_t sequence;
} PamojaMavlinkHeader;
PamojaMavlinkMissionReceiver *pamoja_mavlink_mission_receiver_new(uint8_t target_system,
                                                                  uint8_t target_component,
                                                                  uint8_t mission_type);
PamojaStatus pamoja_mavlink_mission_receiver_request_list(const PamojaMavlinkMissionReceiver *receiver,
                                                          PamojaMavlinkHeader header,
                                                          PamojaMavlinkFrame **out_frame);
PamojaStatus pamoja_mavlink_mission_receiver_on_frame(PamojaMavlinkMissionReceiver *receiver,
                                                      const PamojaMavlinkFrame *frame,
                                                      PamojaMavlinkHeader header,
                                                      uint32_t *out_kind,
                                                      PamojaMavlinkMessage **out_accepted,
                                                      PamojaMavlinkFrame **out_reply);
uint8_t pamoja_mavlink_mission_receiver_is_complete(const PamojaMavlinkMissionReceiver *receiver);
uint16_t pamoja_mavlink_mission_receiver_expected(const PamojaMavlinkMissionReceiver *receiver);
void pamoja_mavlink_mission_receiver_free(PamojaMavlinkMissionReceiver *receiver);
PamojaMavlinkMissionSender *pamoja_mavlink_mission_sender_new(uint8_t target_system,
                                                              uint8_t target_component,
                                                              uint8_t mission_type);
PamojaStatus pamoja_mavlink_mission_sender_add_item(PamojaMavlinkMissionSender *sender,
                                                    const uint8_t *payload,
                                                    uintptr_t payload_len);
uint16_t pamoja_mavlink_mission_sender_len(const PamojaMavlinkMissionSender *sender);
PamojaStatus pamoja_mavlink_mission_sender_count(const PamojaMavlinkMissionSender *sender,
                                                 PamojaMavlinkHeader header,
                                                 PamojaMavlinkFrame **out_frame);
PamojaStatus pamoja_mavlink_mission_sender_on_frame(const PamojaMavlinkMissionSender *sender,
                                                    const PamojaMavlinkFrame *frame,
                                                    PamojaMavlinkHeader header,
                                                    uint32_t *out_kind,
                                                    uint8_t *out_result,
                                                    PamojaMavlinkFrame **out_reply);
void pamoja_mavlink_mission_sender_free(PamojaMavlinkMissionSender *sender);
PamojaMavlinkCommand *pamoja_mavlink_command_new(uint16_t command, uint8_t max_retries);
uint16_t pamoja_mavlink_command_id(const PamojaMavlinkCommand *command);
uint8_t pamoja_mavlink_command_confirmation(const PamojaMavlinkCommand *command);
PamojaStatus pamoja_mavlink_command_on_frame(const PamojaMavlinkCommand *command,
                                             const PamojaMavlinkFrame *frame,
                                             uint32_t *out_kind,
                                             uint8_t *out_value);
uint8_t pamoja_mavlink_command_on_timeout(PamojaMavlinkCommand *command, uint8_t *out_confirmation);
void pamoja_mavlink_command_free(PamojaMavlinkCommand *command);
uint16_t pamoja_mavlink_offboard_type_mask(uint32_t flags);
PamojaStatus pamoja_mavlink_offboard_local_position(PamojaMavlinkHeader header,
                                                    uint32_t time_boot_ms,
                                                    uint8_t coordinate_frame,
                                                    uint8_t target_system,
                                                    uint8_t target_component,
                                                    float x,
                                                    float y,
                                                    float z,
                                                    PamojaMavlinkFrame **out_frame);
PamojaStatus pamoja_mavlink_offboard_local_velocity(PamojaMavlinkHeader header,
                                                    uint32_t time_boot_ms,
                                                    uint8_t coordinate_frame,
                                                    uint8_t target_system,
                                                    uint8_t target_component,
                                                    float vx,
                                                    float vy,
                                                    float vz,
                                                    PamojaMavlinkFrame **out_frame);
PamojaStatus pamoja_mavlink_offboard_global_position(PamojaMavlinkHeader header,
                                                     uint32_t time_boot_ms,
                                                     uint8_t coordinate_frame,
                                                     uint8_t target_system,
                                                     uint8_t target_component,
                                                     int32_t lat_int,
                                                     int32_t lon_int,
                                                     float alt,
                                                     PamojaMavlinkFrame **out_frame);